only start container again if there was a failure

--- a/docker/files/systemd.conf
+++ b/docker/files/systemd.conf
@@ -17,11 +17,12 @@ After=docker.service
 {%- endif %}
 
 
+# https://www.freedesktop.org/software/systemd/man/systemd.service.html
 [Service]
-Restart=always
-ExecStart=/usr/bin/docker run {% for option in runoptions %}{{ option }} {% endfor %} --name={{ name }} {{ container.image }} {{ cmd }}
-ExecStop=/usr/bin/docker stop {{ name }}
+Restart=on-failure
+ExecStart=/usr/bin/docker run {% for option in runoptions %}{% if option != "-d" %}{{ option }}{% endif %} {% endfor %} --name={{ name }} {{ container.image }} {{ cmd }}
+ExecStop=/usr/bin/docker stop -t 2 {{ name }}
 ExecStopPost=/usr/bin/docker rm -f {{ name }}
 
 [Install]
-WantedBy=local.target
+WantedBy=default.target
